Change group layers to be layer objects instead of string set. And all the changes that entail from that.