@@ -1,50 +1,76 @@
 package dev.yurisuika.raised.client.gui.screens;
 
 import dev.yurisuika.raised.Raised;
+import dev.yurisuika.raised.client.gui.components.AdjustableSelectionList;
+import dev.yurisuika.raised.client.gui.components.AdjustableWidgetSelectionList;
 import dev.yurisuika.raised.client.gui.components.IntRangeSliderButton;
+import dev.yurisuika.raised.client.gui.layer.Layer;
 import dev.yurisuika.raised.config.Config;
 import dev.yurisuika.raised.registry.LayerRegistry;
+import dev.yurisuika.raised.util.Icon;
 import dev.yurisuika.raised.util.Parse;
 import net.minecraft.ChatFormatting;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.GuiGraphicsExtractor;
 import net.minecraft.client.gui.components.AbstractWidget;
 import net.minecraft.client.gui.components.Button;
+import net.minecraft.client.gui.components.CycleButton;
 import net.minecraft.client.gui.components.Tooltip;
+import net.minecraft.client.gui.components.events.GuiEventListener;
+import net.minecraft.client.gui.narration.NarratableEntry;
+import net.minecraft.client.gui.narration.NarratedElementType;
+import net.minecraft.client.gui.narration.NarrationElementOutput;
 import net.minecraft.client.gui.screens.Screen;
 import net.minecraft.client.input.MouseButtonEvent;
 import net.minecraft.client.renderer.RenderPipelines;
+import net.minecraft.client.resources.sounds.SimpleSoundInstance;
 import net.minecraft.network.chat.CommonComponents;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.MutableComponent;
 import net.minecraft.resources.Identifier;
+import net.minecraft.sounds.SoundEvents;
 
-import java.util.ArrayList;
-import java.util.Comparator;
-import java.util.List;
-import java.util.Objects;
-import java.util.stream.Collectors;
+import java.util.*;
 
-public class EditScreen extends AbstractLayersScreen {
+public class EditScreen extends AbstractListScreen {
 
+    public static final Set<String> NAMESPACES = new HashSet<>();
+    public String selectedNamespace = Identifier.DEFAULT_NAMESPACE;
+    public ArrayList<AbstractWidget> leftControls;
+    public ArrayList<AbstractWidget> rightControls;
+    public SelectedLayerList leftList;
+    public AvailableLayerList rightList;
     public ArrayList<AbstractWidget> options;
+    public AbstractWidget controlPrevious;
+    public AbstractWidget controlNext;
     public AbstractWidget controlReturn;
     public AbstractWidget optionOffsetX;
     public AbstractWidget optionOffsetY;
-    public TransferableLayerList leftList;
-    public TransferableLayerList rightList;
+    public int leftTopRowCount = 1;
+    public int leftBottomRowCount = 1;
+    public int rightTopRowCount = 1;
+    public int rightBottomRowCount = 1;
+    public int leftPanelX;
+    public int leftPanelY;
+    public int rightPanelX;
+    public int rightPanelY;
+    public int leftListHeight;
+    public int rightListHeight;
+    public int listWidth;
+    public int leftListY;
+    public int rightListY;
 
     public EditScreen(Screen parent) {
-        super(parent, 3, 1);
+        super(parent, 320, 240);
     }
 
     public List<Identifier> listSelectedLayers() {
-        return Config.getOptions().getGroups().get(getCurrentGroup().getGroupName()).getLayers().stream()
+        return Config.getOptions().getGroups().get(getCurrentGroup().getGroupName()).getLayers().keySet().stream()
                 .sorted(Comparator.comparing(String::toString))
                 .filter(groupedLayerName -> LayerRegistry.LAYERS
                         .contains(Identifier.tryParse(groupedLayerName)))
                 .map(Identifier::tryParse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<Identifier> listAvailableLayers() {
@@ -58,13 +84,37 @@ public class EditScreen extends AbstractLayersScreen {
     }
 
     @Override
-    public void addContent() {
-        super.addContent();
+    public void setSizes() {
+        super.setSizes();
 
-        addOptions();
+        panelWidth = (containerWidth - (CONTAINER_GAP + (2 * CONTAINER_PADDING))) / 2;
+        leftPanelX = containerX + CONTAINER_PADDING;
+        leftPanelY = containerY + CONTAINER_PADDING;
+        rightPanelX = leftPanelX + panelWidth + CONTAINER_GAP;
+        rightPanelY = containerY + CONTAINER_PADDING;
+        leftListHeight = panelHeight - (2 * LIST_BORDER) - ((leftTopRowCount + leftBottomRowCount) * WIDGET_AND_GAP_HEIGHT);
+        rightListHeight = panelHeight - (2 * LIST_BORDER) - ((rightTopRowCount + rightBottomRowCount) * WIDGET_AND_GAP_HEIGHT);
+        listWidth = panelWidth - (2 * LIST_BORDER) - (2 * PANEL_PADDING);
+        leftListY = leftPanelY + (leftTopRowCount * WIDGET_AND_GAP_HEIGHT) + LIST_BORDER;
+        rightListY = rightPanelY + (rightTopRowCount * WIDGET_AND_GAP_HEIGHT) + LIST_BORDER;
     }
 
     @Override
+    public void init() {
+        LayerRegistry.LAYERS.forEach(layerName -> NAMESPACES.add(layerName.getNamespace()));
+
+        super.init();
+    }
+
+    @Override
+    public void addContent() {
+        addLeftControls();
+        addRightControls();
+        addLeftList();
+        addRightList();
+        addOptions();
+    }
+
     public void addLeftControls() {
         leftControls = new ArrayList<>();
 
@@ -78,25 +128,55 @@ public class EditScreen extends AbstractLayersScreen {
         leftControls.forEach(this::addRenderableWidget);
     }
 
+    public void addRightControls() {
+        rightControls = new ArrayList<>();
+
+        controlPrevious = Button.builder(Component.translatable("options.raised.control.previous"), button -> getPrevious())
+                .size(WIDGET_WIDTH_SQUARE, WIDGET_HEIGHT)
+                .pos(rightPanelX, rightPanelY)
+                .build();
+        controlNext = Button.builder(Component.translatable("options.raised.control.next"), button -> getNext())
+                .size(WIDGET_WIDTH_SQUARE, WIDGET_HEIGHT)
+                .pos(rightPanelX + panelWidth - WIDGET_WIDTH_SQUARE, rightPanelY)
+                .build();
+
+        rightControls.add(controlPrevious);
+        rightControls.add(controlNext);
+
+        rightControls.forEach(this::addRenderableWidget);
+    }
+
+    public void addLeftList() {
+        leftList = new SelectedLayerList(minecraft, this, listWidth, leftListHeight, leftListY);
+
+        addRenderableWidget(leftList);
+    }
+
+    public void addRightList() {
+        rightList = new AvailableLayerList(minecraft, this, listWidth, rightListHeight, rightListY);
+
+        addRenderableWidget(rightList);
+    }
+
     public void addOptions() {
         options = new ArrayList<>();
 
         optionOffsetX = IntRangeSliderButton.builder(Component.translatable("options.raised.offset.x"), value -> Config.update(o -> o.getGroups().get(getCurrentGroup().getGroupName()).getOffset().setX(value)))
-                .range(0, width / 4)
+                .range(0, width)
                 .initialValue(Config.getOptions().getGroups().get(getCurrentGroup().getGroupName()).getOffset().getX())
-                .valueText(value -> value == 0 ? CommonComponents.OPTION_OFF : Component.literal(value + "px (" + Math.round(Math.ceil((value / ((float) width / 4)) * 100)) + "%)"))
+                .valueText(value -> value == 0 ? CommonComponents.OPTION_OFF : Component.literal(value + "px (" + Math.round(Math.ceil((value / ((float) width)) * 100)) + "%)"))
                 .tooltip(value -> Tooltip.create(Component.translatable("options.raised.offset.x.tooltip")))
                 .size(panelWidth, WIDGET_HEIGHT)
-                .pos(leftPanelX, leftPanelY + WIDGET_AND_GAP_HEIGHT)
+                .pos(leftPanelX, leftPanelY + panelHeight - WIDGET_HEIGHT)
                 .build();
 
         optionOffsetY = IntRangeSliderButton.builder(Component.translatable("options.raised.offset.y"), value -> Config.update(o -> o.getGroups().get(getCurrentGroup().getGroupName()).getOffset().setY(value)))
-                .range(0, height / 4)
+                .range(0, height)
                 .initialValue(Config.getOptions().getGroups().get(getCurrentGroup().getGroupName()).getOffset().getY())
-                .valueText(value -> value == 0 ? CommonComponents.OPTION_OFF : Component.literal(value + "px (" + Math.round(Math.ceil((value / ((float) height / 4)) * 100)) + "%)"))
+                .valueText(value -> value == 0 ? CommonComponents.OPTION_OFF : Component.literal(value + "px (" + Math.round(Math.ceil((value / ((float) height)) * 100)) + "%)"))
                 .tooltip(value -> Tooltip.create(Component.translatable("options.raised.offset.y.tooltip")))
                 .size(panelWidth, WIDGET_HEIGHT)
-                .pos(leftPanelX, leftPanelY + (2 * WIDGET_AND_GAP_HEIGHT))
+                .pos(rightPanelX, rightPanelY + panelHeight - WIDGET_HEIGHT)
                 .build();
 
         options.add(optionOffsetX);
@@ -105,18 +185,34 @@ public class EditScreen extends AbstractLayersScreen {
         options.forEach(this::addRenderableWidget);
     }
 
-    @Override
-    public void addLeftList() {
-        leftList = new TransferableLayerList(minecraft, this, false, listWidth, leftListHeight, leftListY);
-
-        addRenderableWidget(leftList);
+    public void resetLeftControls() {
+        if (leftControls != null) {
+            leftControls.forEach(this::removeWidget);
+            leftControls.clear();
+            addLeftControls();
+        }
     }
 
-    @Override
-    public void addRightList() {
-        rightList = new TransferableLayerList(minecraft, this, true, listWidth, rightListHeight, rightListY);
+    public void resetRightControls() {
+        if (rightControls != null) {
+            rightControls.forEach(this::removeWidget);
+            rightControls.clear();
+            addRightControls();
+        }
+    }
 
-        addRenderableWidget(rightList);
+    public void resetLeftList() {
+        if (leftList != null) {
+            leftList.setScrollAmount(0.0F);
+            leftList.setEntries();
+        }
+    }
+
+    public void resetRightList() {
+        if (rightList != null) {
+            rightList.setScrollAmount(0.0F);
+            rightList.setEntries();
+        }
     }
 
     public void resetOptions() {
@@ -127,20 +223,32 @@ public class EditScreen extends AbstractLayersScreen {
         }
     }
 
-    @Override
-    public void resetLeftList() {
-        if (leftList != null) {
-            leftList.setScrollAmount(0.0F);
-            leftList.setEntries();
+    public void getPrevious() {
+        List<String> keys = NAMESPACES.stream().toList();
+        int index = keys.indexOf(selectedNamespace) - 1;
+
+        if (index < 0) {
+            setMod(keys.getLast());
+        } else {
+            setMod(keys.get(index));
         }
     }
 
-    @Override
-    public void resetRightList() {
-        if (rightList != null) {
-            rightList.setScrollAmount(0.0F);
-            rightList.setEntries();
+    public void getNext() {
+        List<String> keys = NAMESPACES.stream().toList();
+        int index = keys.indexOf(selectedNamespace) + 1;
+
+        if (index >= keys.size()) {
+            setMod(keys.getFirst());
+        } else {
+            setMod(keys.get(index));
         }
+    }
+
+    public void setMod(String mod) {
+        selectedNamespace = mod;
+
+        resetRightList();
     }
 
     @Override
@@ -159,16 +267,27 @@ public class EditScreen extends AbstractLayersScreen {
 
     @Override
     public void resize(int width, int height) {
-        if (Config.getOptions().getGroups().get(getCurrentGroup().getGroupName()).getOffset().getX() > width / 4) {
-            Config.update(o -> o.getGroups().get(getCurrentGroup().getGroupName()).getOffset().setX(width / 4));
+        if (Config.getOptions().getGroups().get(getCurrentGroup().getGroupName()).getOffset().getX() > width) {
+            Config.update(o -> o.getGroups().get(getCurrentGroup().getGroupName()).getOffset().setX(width));
         }
-        if (Config.getOptions().getGroups().get(getCurrentGroup().getGroupName()).getOffset().getY() > height / 4) {
-            Config.update(o -> o.getGroups().get(getCurrentGroup().getGroupName()).getOffset().setY(height / 4));
+        if (Config.getOptions().getGroups().get(getCurrentGroup().getGroupName()).getOffset().getY() > height) {
+            Config.update(o -> o.getGroups().get(getCurrentGroup().getGroupName()).getOffset().setY(height));
         }
 
         resetOptions();
 
+        resetLeftControls();
+        resetRightControls();
+
         super.resize(width, height);
+    }
+
+    @Override
+    public void tick() {
+        super.tick();
+
+        controlPrevious.active = NAMESPACES.size() > 1;
+        controlNext.active = NAMESPACES.size() > 1;
     }
 
     @Override
@@ -188,10 +307,19 @@ public class EditScreen extends AbstractLayersScreen {
     public void extractRenderState(GuiGraphicsExtractor guiGraphics, int mouseX, int mouseY, float partialTick) {
         super.extractRenderState(guiGraphics, mouseX, mouseY, partialTick);
 
-        guiGraphics.textRenderer().acceptScrollingWithDefaultCenter(
+        guiGraphics.textRenderer().acceptScrolling(
                 Component.literal(getCurrentGroup().getGroupName()),
+                leftPanelX + (panelWidth / 2),
                 leftPanelX + WIDGET_WIDTH_SQUARE + PANEL_GAP,
                 leftPanelX + panelWidth,
+                rightPanelY,
+                rightPanelY + WIDGET_HEIGHT);
+
+        guiGraphics.textRenderer().acceptScrolling(
+                Component.literal(Parse.parseNamespace(selectedNamespace)),
+                rightPanelX + (panelWidth / 2),
+                rightPanelX + WIDGET_WIDTH_SQUARE + PANEL_GAP,
+                rightPanelX + panelWidth - WIDGET_WIDTH_SQUARE - PANEL_GAP,
                 rightPanelY,
                 rightPanelY + WIDGET_HEIGHT);
 
@@ -201,7 +329,7 @@ public class EditScreen extends AbstractLayersScreen {
                     font,
                     empty.withStyle(ChatFormatting.GRAY),
                     leftPanelX + (panelWidth / 2),
-                    leftPanelY + panelHeight - LIST_BORDER - (leftListHeight / 2) - (font.lineHeight / 2),
+                    leftListY + (leftListHeight / 2) - (font.lineHeight / 2),
                     -1);
             minecraft.getNarrator().saySystemNow(empty);
         }
@@ -212,77 +340,276 @@ public class EditScreen extends AbstractLayersScreen {
                     font,
                     empty.withStyle(ChatFormatting.GRAY),
                     rightPanelX + (panelWidth / 2),
-                    rightPanelY + panelHeight - LIST_BORDER - (rightListHeight / 2) - (font.lineHeight / 2),
+                    rightListY + (rightListHeight / 2) - (font.lineHeight / 2),
                     -1);
             minecraft.getNarrator().saySystemNow(empty);
         }
     }
 
-    public class TransferableLayerList extends AbstractLayerList<TransferableLayerList.Entry> {
+    public class SelectedLayerList extends AdjustableWidgetSelectionList<SelectedLayerList.Entry> {
 
-        private final boolean available;
+        protected final EditScreen parent;
 
-        public TransferableLayerList(Minecraft minecraft, EditScreen parent, boolean available, int width, int height, int y) {
-            super(minecraft, parent, width, height, y);
-            this.available = available;
+        public SelectedLayerList(Minecraft minecraft, EditScreen parent, int width, int height, int y) {
+            super(minecraft, width, height, y, ENTRY_HEIGHT, LIST_PADDING_X, LIST_PADDING_Y);
+            this.parent = parent;
             setEntries();
         }
 
         @Override
         public void setEntries() {
             clearEntries();
-            (isAvailable() ? listAvailableLayers() : listSelectedLayers()).forEach(layerName -> addEntry(new Entry(layerName)));
+            listSelectedLayers().forEach(layerName -> addEntry(new Entry(layerName)));
         }
 
-        public boolean isAvailable() {
-            return available;
+        public Entry getHoveredEntry() {
+            return getHovered();
         }
 
-        public class Entry extends AbstractLayerList.Entry<Entry> {
+        public class Entry extends AdjustableWidgetSelectionList.Entry<Entry> {
+
+            protected final Identifier layerName;
+            protected final AbstractWidget optionAnchor;
 
             public Entry(Identifier layerName) {
-                super(layerName);
+                this.layerName = layerName;
+
+                optionAnchor = CycleButton.builder(Layer.Anchor::glyph, Config.getOptions().getGroups().get(getCurrentGroup().getGroupName()).getLayers().get(layerName.toString()).getAnchor())
+                        .withValues(Layer.Anchor.values())
+                        .displayOnlyValue()
+                        .withTooltip(value -> Tooltip.create(Component.translatable("options.raised.anchor.tooltip", Component.translatable("options.raised.anchor." + value.getSerializedName()))))
+                        .create(getX() + getWidth() - ENTRY_PADDING - WIDGET_WIDTH_SQUARE,
+                                getY() + ENTRY_PADDING,
+                                WIDGET_WIDTH_SQUARE,
+                                WIDGET_HEIGHT,
+                                Component.translatable("options.raised.anchor"),
+                                (button, value) -> Config.update(o -> o.getGroups().get(getCurrentGroup().getGroupName()).getLayers().get(layerName.toString()).setAnchor(value)));
+            }
+
+            public Identifier getLayerName() {
+                return layerName;
             }
 
             @Override
             public int getWidth() {
-                return super.getWidth() - (TransferableLayerList.this.scrollable() ? TransferableLayerList.this.scrollbarWidth() : 0);
+                return super.getWidth() - (SelectedLayerList.this.scrollable() ? SelectedLayerList.this.scrollbarWidth() : 0);
             }
 
             @Override
             public void extractContent(GuiGraphicsExtractor guiGraphics, int mouseX, int mouseY, boolean bl, float partialTick) {
-                super.extractContent(guiGraphics, mouseX, mouseY, bl, partialTick);
+                guiGraphics.blit(
+                        RenderPipelines.GUI_TEXTURED,
+                        Icon.getLayerIcon(layerName),
+                        getX() + ENTRY_PADDING,
+                        getY() + ENTRY_PADDING,
+                        0,
+                        0,
+                        WIDGET_WIDTH_SQUARE,
+                        WIDGET_HEIGHT,
+                        20,
+                        20);
+
+                guiGraphics.textRenderer().acceptScrolling(
+                        Component.literal(entryText()),
+                        getX() + (getWidth() / 2),
+                        getX() + ENTRY_PADDING + WIDGET_WIDTH_SQUARE + ENTRY_GAP,
+                        getX() + getWidth() - ENTRY_PADDING - WIDGET_WIDTH_SQUARE + ENTRY_GAP,
+                        getY(),
+                        getY() + getContentHeight());
 
                 int i = mouseX - getX();
                 if (isMouseOver(mouseX, mouseY)) {
                     guiGraphics.blitSprite(
                             RenderPipelines.GUI_TEXTURED,
-                            Identifier.fromNamespaceAndPath(Raised.MOD_ID, "layer_list/" + (isAvailable() ? "" : "un") + "select" + (i < ENTRY_HEIGHT ? "_highlighted" : "")),
-                            getContentX(),
-                            getContentY(),
+                            Identifier.fromNamespaceAndPath(Raised.MOD_ID, "layer_list/unselect" + (i < ENTRY_HEIGHT ? "_highlighted" : "")),
+                            getX(),
+                            getY(),
                             ENTRY_HEIGHT,
                             ENTRY_HEIGHT);
                     if (i < ENTRY_HEIGHT) {
-                        TransferableLayerList.this.handleCursor(guiGraphics);
+                        SelectedLayerList.this.handleCursor(guiGraphics);
                     }
+                }
+
+                optionAnchor.setPosition(getX() + getWidth() - ENTRY_PADDING - WIDGET_WIDTH_SQUARE, getY() + ENTRY_PADDING);
+                optionAnchor.extractRenderState(guiGraphics, mouseX, mouseY, partialTick);
+            }
+
+            public String entryText() {
+                if (this == SelectedLayerList.this.getHoveredEntry()) {
+                    return layerName.toString();
+                } else {
+                    return Parse.parsePath(layerName.getPath());
                 }
             }
 
             @Override
-            public String entryText() {
-                return Parse.parseNamespace(layerName.getNamespace()) + ": " + Parse.parsePath(layerName.getPath());
+            public List<? extends GuiEventListener> children() {
+                return List.of(optionAnchor);
             }
 
             @Override
-            public boolean handleClick(final MouseButtonEvent event) {
+            public List<? extends NarratableEntry> narratables() {
+                NarratableEntry narration = new NarratableEntry() {
+
+                    @Override
+                    public NarrationPriority narrationPriority() {
+                        return NarrationPriority.NONE;
+                    }
+
+                    @Override
+                    public void updateNarration(NarrationElementOutput output) {
+                        output.add(NarratedElementType.TITLE, Component.literal(Parse.parsePath(layerName.getPath())));
+                    }
+
+                };
+
+                return List.of(optionAnchor, narration);
+            }
+
+            public boolean handleTransfer(final MouseButtonEvent event) {
                 int relX = (int) event.x() - getContentX();
                 int relY = (int) event.y() - getContentY();
                 if (relX >= 0 && relX < ENTRY_HEIGHT && relY >= 0 && relY < ENTRY_HEIGHT) {
-                    if (isAvailable()) {
-                        Config.update(o -> o.getGroups().get(getCurrentGroup().getGroupName()).getLayers().add(getLayerName().toString()));
-                    } else {
-                        Config.update(o -> o.getGroups().get(getCurrentGroup().getGroupName()).getLayers().remove(getLayerName().toString()));
+                    Config.update(o -> o.getGroups().get(getCurrentGroup().getGroupName()).getLayers().remove(getLayerName().toString()));
+                    resetLeftList();
+                    resetRightList();
+                    return true;
+                }
+                return false;
+            }
+
+            public boolean handleWidget(final MouseButtonEvent event, boolean doubleClick) {
+                if (optionAnchor.mouseClicked(event, doubleClick)) {
+                    setFocused(optionAnchor);
+                    return true;
+                }
+                return false;
+            }
+
+            @Override
+            public boolean mouseClicked(final MouseButtonEvent event, boolean doubleClick) {
+                Minecraft.getInstance().getSoundManager().play(SimpleSoundInstance.forUI(SoundEvents.UI_BUTTON_CLICK, 1.0F));
+                setSelected(true);
+
+                if (handleTransfer(event)) {
+                    return true;
+                }
+
+                if (handleWidget(event, doubleClick)) {
+                    return true;
+                }
+
+                return true;
+            }
+
+            @Override
+            public boolean mouseReleased(final MouseButtonEvent event) {
+                return optionAnchor.mouseReleased(event);
+            }
+
+            public void setSelected(boolean selected) {
+                if (selected) {
+                    SelectedLayerList.this.setSelected(this);
+                }
+            }
+
+        }
+
+    }
+
+    public class AvailableLayerList extends AdjustableSelectionList<AvailableLayerList.Entry> {
+
+        protected final EditScreen parent;
+
+        public AvailableLayerList(Minecraft minecraft, EditScreen parent, int width, int height, int y) {
+            super(minecraft, width, height, y, ENTRY_HEIGHT, LIST_PADDING_X, LIST_PADDING_Y);
+            this.parent = parent;
+            setEntries();
+        }
+
+        @Override
+        public void setEntries() {
+            clearEntries();
+            listAvailableLayers().forEach(layerName -> addEntry(new Entry(layerName)));
+        }
+
+        public Entry getHoveredEntry() {
+            return getHovered();
+        }
+
+        public class Entry extends AdjustableSelectionList.Entry<Entry> {
+
+            protected final Identifier layerName;
+
+            public Entry(Identifier layerName) {
+                this.layerName = layerName;
+            }
+
+            public Identifier getLayerName() {
+                return layerName;
+            }
+
+            @Override
+            public int getWidth() {
+                return super.getWidth() - (AvailableLayerList.this.scrollable() ? AvailableLayerList.this.scrollbarWidth() : 0);
+            }
+
+            @Override
+            public void extractContent(GuiGraphicsExtractor guiGraphics, int mouseX, int mouseY, boolean bl, float partialTick) {
+                guiGraphics.blit(
+                        RenderPipelines.GUI_TEXTURED,
+                        Icon.getLayerIcon(layerName),
+                        getX() + ENTRY_PADDING,
+                        getY() + ENTRY_PADDING,
+                        0,
+                        0,
+                        WIDGET_WIDTH_SQUARE,
+                        WIDGET_HEIGHT,
+                        20,
+                        20);
+
+                guiGraphics.textRenderer().acceptScrolling(
+                        Component.literal(entryText()),
+                        getX() + (getWidth() / 2),
+                        getX() + ENTRY_PADDING + WIDGET_WIDTH_SQUARE + ENTRY_GAP,
+                        getX() + getWidth() - ENTRY_PADDING,
+                        getY(),
+                        getY() + getContentHeight());
+
+                int i = mouseX - getX();
+                if (isMouseOver(mouseX, mouseY)) {
+                    guiGraphics.blitSprite(
+                            RenderPipelines.GUI_TEXTURED,
+                            Identifier.fromNamespaceAndPath(Raised.MOD_ID, "layer_list/select" + (i < ENTRY_HEIGHT ? "_highlighted" : "")),
+                            getX(),
+                            getY(),
+                            ENTRY_HEIGHT,
+                            ENTRY_HEIGHT);
+                    if (i < ENTRY_HEIGHT) {
+                        AvailableLayerList.this.handleCursor(guiGraphics);
                     }
+                }
+            }
+
+            public String entryText() {
+                if (this == AvailableLayerList.this.getHoveredEntry()) {
+                    return layerName.toString();
+                } else {
+                    return Parse.parsePath(layerName.getPath());
+                }
+            }
+
+            @Override
+            public Component getNarration() {
+                return Component.literal(Parse.parsePath(layerName.getPath()));
+            }
+
+            public boolean handleTransfer(final MouseButtonEvent event) {
+                int relX = (int) event.x() - getContentX();
+                int relY = (int) event.y() - getContentY();
+                if (relX >= 0 && relX < ENTRY_HEIGHT && relY >= 0 && relY < ENTRY_HEIGHT) {
+                    Config.update(o -> o.getGroups().get(getCurrentGroup().getGroupName()).getLayers().put(layerName.toString(), LayerRegistry.findDefaultLayer(layerName)));
                     resetLeftList();
                     resetRightList();
                     return true;
@@ -291,9 +618,20 @@ public class EditScreen extends AbstractLayersScreen {
             }
 
             @Override
+            public boolean mouseClicked(final MouseButtonEvent event, boolean doubleClick) {
+                Minecraft.getInstance().getSoundManager().play(SimpleSoundInstance.forUI(SoundEvents.UI_BUTTON_CLICK, 1.0F));
+                setSelected(true);
+
+                if (handleTransfer(event)) {
+                    return true;
+                }
+
+                return true;
+            }
+
             public void setSelected(boolean selected) {
                 if (selected) {
-                    TransferableLayerList.this.setSelected(this);
+                    AvailableLayerList.this.setSelected(this);
                 }
             }
 
